RESOLVED FIXED302676
[iOS] `viewport-fit: auto` is not honored when navigating from a page with `viewport-fit: cover`
https://bugs.webkit.org/show_bug.cgi?id=302676
Summary [iOS] `viewport-fit: auto` is not honored when navigating from a page with `v...
Aditya Keerthi
Reported 2025-11-17 17:22:10 PST
1. Create a test app with a landscape WKWebView that covers the screen 2. Load apple.com 3. Load google.com 4. Observe that google.com is obscured by the dynamic island
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-17 17:22:16 PST
Aditya Keerthi
Comment 2 2025-11-17 17:34:13 PST
EWS
Comment 3 2025-11-18 09:32:38 PST
Committed 303187@main (be2067342cce): <https://commits.webkit.org/303187@main> Reviewed commits have been landed. Closing PR #54083 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.