Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -3617,10 +3617,10 @@ static WebCore::IntDegrees activeOrientation(WKWebView *webView)
 
 - (void)_setAvoidsUnsafeArea:(BOOL)avoidsUnsafeArea
 {
-    if (_perProcessState.avoidsUnsafeArea == avoidsUnsafeArea)
+    if (_avoidsUnsafeArea == avoidsUnsafeArea)
         return;
 
-    _perProcessState.avoidsUnsafeArea = avoidsUnsafeArea;
+    _avoidsUnsafeArea = avoidsUnsafeArea;
 
     if ([self _updateScrollViewContentInsetsIfNecessary] && !self._shouldDeferGeometryUpdates && !_overriddenLayoutParameters)
         [self _dispatchSetViewLayoutSize:[self activeViewLayoutSize:self.bounds]];
@@ -4377,7 +4377,7 @@ static bool isLockdownModeWarningNeeded()
 {
     if (![self usesStandardContentView])
         return NO;
-    return _perProcessState.avoidsUnsafeArea;
+    return _avoidsUnsafeArea;
 }
 
 - (UIView *)_enclosingViewForExposedRectComputation
